# pyspark-cdc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: publish.yaml  test.yaml
src/pyspark_cdc/: __init__.py
src/pyspark_cdc/capture/: builder.py  delta.py  logger.py
src/pyspark_cdc/optimizer/: cron_parser.py
src/pyspark_cdc/validator/: validators.py
src/pyspark_cdc/watermark/: __init__.py  models.py
tests/pyspark_cdc_test/: __init__.py  conftest.py  test_bugs.py  test_databricks.ipynb
tests/pyspark_cdc_test/bugs/: test_bugs_found.py
tests/pyspark_cdc_test/capture/: test_extra_scenarios.py  test_full_capture.py  test_incremental_capture.py
tests/pyspark_cdc_test/capture/postgres/: employee_ddl.sql  postgres_docker.sh  test_full_capture.py  test_incremental_capture.py
tests/pyspark_cdc_test/optimizer/: test_cron_parser.py
tests/pyspark_cdc_test/test_utils/: dataframe_operations.py  employee_generator.py  postgres_operations.py
tests/pyspark_cdc_test/utils/: employee_generator.py  postgres_operations.py  test_utils.py
tests/pyspark_cdc_test/validator/: test_validators.py
tests/pyspark_cdc_test/watermark/: test_watermark.py
