[project]
name = "pyspark-cdc"
version = "0.1.0"
description = "A Python library for Change Data Capture (CDC) workflows using PySpark and Delta Lake."
authors = [
    {name = "Bitros Wang",email = "mopspecial@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
  "spark",
  "pyspark",
  "cdc",
  "change data capture",
  "data engineering",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
]

[project.urls]
Repository = "https://github.com/Bitros/pyspark-cdc"
Issues = "https://github.com/Bitros/pyspark-cdc/issues"

[tool.poetry]
packages = [
    {include = "pyspark_cdc", from = "src"},
    # Include the test code to upload and test .whl package in Databricks
    {include = "pyspark_cdc_test", from = "tests", format = "wheel"},
]

[tool.poetry.group.dev.dependencies]
pyspark = "^4.0.0"
delta-spark = "^4.0.0"
black = "^25.1.0"
mypy = "^1.16.0"
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pyspark = "^4.0.0"
delta-spark = "^4.0.0"
pytest = "^8.4.0"
faker = "^37.4.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
ignore_missing_imports = true
non_interactive = true
install_types = true

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pytest.ini_options]
log_cli = true
log_format = "%(asctime)s %(levelname)-8s %(name)s [%(filename)s:%(lineno)d] %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
